cabal-version:      2.4
name:               module-names
version:            0.1.0.0
synopsis:           sample project to learn module names

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             salimp2009
maintainer:         salimp2009@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library 
    exposed-modules:  MyLib
                    , Haskellbook.Examples.Introduction.CreatingModules
                    , Haskellbook.Examples.SortedList 
                    , Haskellbook.Examples.UserInfo 
                    , Haskellbook.Examples 
                    , ModuleDemo
                    , TypeClasses.Motivation
                    , TypeClasses.OrderingExample
                    , TypeClasses.DefaultSignatures
                    , TypeClasses.TypeApplications
                    , TypeClasses.NewTypes
                    , TypeClasses.HigherKindedTypes
                    , TypeClasses.HigherKindedSelector
                    , TypeClasses.DerivingExamples
                    , TypeClasses.MyNumericMonoids
                    , TypeClasses.AnyclassDeriving
                    , TypeClasses.DerivingNullable
                    , IOActions.IOBasics
                    , IOActions.MappingIO
                    , IOActions.IOinRealApps

    -- Modules included in this library but not exported.
    other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: RecordWildCards
                      , ScopedTypeVariables
                      , TypeApplications 
                      , KindSignatures 

executable io-actions
    main-is: Main.hs   

    -- Modules included in this executable, other than Main.
    other-modules: MyLib  
                 , IOActions.IOBasics
                 , IOActions.MappingIO
                 , IOActions.IOinRealApps
                 , TypeClasses.Motivation

    default-extensions: RecordWildCards
                      , ScopedTypeVariables
                      , TypeApplications 
                      , KindSignatures                 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:    

    build-depends:
                      base >=4.7 && <5
                    

    hs-source-dirs:   app , src
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns	
    default-language: Haskell2010                                   

test-suite module-names-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.1.0
